css/style.css
               /** Version Desktop **/

   /* Définition globale */

* {
   font-family: 'Raleway';
   color: black;
   max-width: 1400px;
}

   /* Définition Body*/

body {
   margin: 0px 0px;
   padding: 0px 50px;
}

   /* Défintion Header */

header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   height: 70px;
   line-height: 68px;
   font-weight: 400;
   font-size: 16px;
}

#logo {
   width: 61px;
   height: 19px;
}

.menu {
   width: 30%;
   display: flex;
   font-style: normal;
   text-align: center;
}

header a {
   padding: 0px 15px;
   width: 40%;
   text-decoration: none;
   color: black;
}

header a:hover {
   font-weight: 500;
   color: #0065fc;
   border-top: 2px solid #0065fc;
}

   /* Défintion Main */

main {
   padding: 10px 0px;
}

   /*Définition Nav */

h1 {
   font-size: 22px;
   font-weight: 700;
   margin: 10px 0px;
   font-weight: bold;
}


.fonction-recherche {
   display: flex;
   flex-direction: row;
   align-items: center;
   height: 49px;
   width: 45%;
   padding: 0px 0px;
   margin: 10px 0px;
   border: 1px solid #f2f2f2;
   border-right: none;
   border-radius: 15px;
}

form {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: row;
}

.fonction-recherche i {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 15%;
   height: 100%;
   background-color: #f2f2f2;
   border: 1px solid #f2f2f2;
   border-radius: 15px 0px 0px 15px;
}

.ville {
   font-size: 18px;
   font-weight: bold;
   width: 85%;
   height: 100%;
   border: none;
   padding: 0px 10px;
}

::placeholder {
   color: black;
}

.ville::placeholder {
   opacity: 1;
}

.ville:focus {
   outline: none;
}

.rechercher {
   font-size: 18px;
   font-weight: 700;
   height: 100%;
   color:white;
   border: 1px solid #0065FC;
   border-radius: 0px 15px 15px 0px;
   background-color: #0065FC;
   padding: 2%;
}

.fonction-recherche .fa-magnifying-glass {
   display:none;
}

h2 {
   font-size: 18px;
   font-weight: 700;
}

.fonction-filtre {
   width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
   padding: 10px 0px;
}

ul {
   width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
   padding-inline-start: 0px;
}

nav li {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   border: 2px solid #D9D9D9;
   border-radius: 25px;
   font-size: 17px;
   font-weight: 700;
   margin-left: 2%;
}

nav li p {
   margin: 10px 20px 10px 10px;
}

nav li:hover {
   background: #DEEBFF;
}

.fonction-information {
   display: flex;
   flex-direction: row;
   align-items: center;
   padding: 10px 0px;
}

.fonction-filtre i {
   color:#0065FC;
   font-size: 22px;
   padding-left: 20px;
}

.fonction-information i {
   color: #0065FC;
   border: 1px solid #D9D9D9;
   border-radius: 90px;
   padding: 5px 9px;
   margin-right: 10px;
}

   /* Définition section Conteneurs */

.conteneur-hebergements {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   background: #FFFFFF;
   border-radius: 20px;
   padding: 10px 0px;
}

.conteneur-hebergements a {
   text-decoration: none;
}

.conteneur-hebergements h2 {
   margin: 0px 0px 10px 0px;
}

   /* Définition Conteneur - Hébergements */

.hebergements {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 2.3%;
   width: 60%;
   background: #F2F2F2;
   border-radius: 20px;
}

.hebergements h1 {
   margin: 0px 0px;
}

.cartes-hebergements {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
}

   /* Définition Cartes Hébergements */

.cartes-hebergements a {
   width: 31%;
   background: #FFFFFF;
   border-radius: 20px;
   margin: 15px 0px;
   box-shadow: 0px 0px 10px #D9D9D9;
}

.cartes-hebergements a img {
   height: 124px;
   width: 94%;
   object-fit: cover;
   border-radius: 20px 20px 0px 0px;  
   overflow: hidden;
   padding: 3%;
}

.cartes-hebergements a p {
   margin: 5px 0px 9px 0px;
   font-size: 14px;
}

h3 {
   font-size: 16px;
   font-weight: 700;
   margin: 0px 0px;
}

.description-carte {
   padding: 0px 2px 10px 16px;
}

.description-carte em {
   font-style: normal;
   font-weight: 600;
}

.etoiles-carte {
   display: flex;
   flex-direction: row;
   align-items: center;
   font-size: 11px;
}

.etoiles-carte i {
   color: #0065FC;
}

.etoiles-carte .etoile-vide i {
   display: flex;
   align-items: center;
   color: #F2F2F2;
}

   /* Définition Conteneur - Populaires */

.populaires {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   width: 28%;
   padding: 2.3%;
   background: #F2F2F2;
   border-radius: 20px;
}

.populaires h1 {
   margin: 0px 0px;
}

.titre-populaires {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
}

.titre-populaires i {
   color:#0065FC;
   height: 18px;
   font-size: 18px;
}

.cartes-populaires {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
}

   /* Définition Cartes - Populaires */

article a {
   width: 100%;
   background: #FFFFFF;
   border-radius: 20px;
   display: flex;
   flex-direction: row;
   margin: 15px 0px;
   box-shadow: 0px 0px 10px #D9D9D9;
}

article img {
   height: 135px;
   width: 40%;
   object-fit: cover;
   border: 5px solid #FFFFFF;
   border-radius: 20px 0px 0px 20px;  
}

article h3 {
   margin-top: 10px;
}

article p {
   margin: 4px 0px;
   font-size: 14px;
}

article .description-carte {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding-left: 15px;
   padding-right: 22px;
}

   /* Définition Conteneur - Activités */

.conteneur-activites {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 10px 0px;
   width: 100%;
   border-radius: 20px;
}

.conteneur-activites h1 {
   padding: 30px 0px 10px 0px;
}

.conteneur-activites a {
   text-decoration: none;
}

.conteneur-activites h2 {
   margin: 0px 0px 10px 0px;
}

.cartes-activites {
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   border-radius: 20px;
}

   /* Définition Cartes - Activités */

.cartes-activites a {
   width: 23%;
   background: #FFFFFF;
   border-radius: 20px;
   display: flex;
   flex-direction: column;
   margin: 15px 0px;
   box-shadow: 0px 0px 10px #D9D9D9;
}

.cartes-activites a img {
   height: 445px;
   width: 100%;
   object-fit: cover;
   border-radius: 20px 20px 0px 0px;  
}

.cartes-activites a h3 {
   display: flex;
   align-items: center;
   height: 15px;
   margin: 20px;
   border-radius: 0px 0px 20px 20px;
}

   /* Définition Footer */

footer {
   display: flex;
   flex-direction: row;
   background-color: #F2F2F2;
   padding: 25px 70px;
   margin-top: 60px;
}

footer ul {
   width: 40%;
   list-style: none;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   padding-inline-start: 0px;
}

footer p {
   margin: 4px 0px;
   font-size: 18px;
   font-weight: 700;
}

footer li {
   margin: 8px 0px;
   font-size: 16px;
   font-weight: 400;
}

               /** Version Tablette **/

@media screen and (max-width: 992px) {

   /* Défintion Body */

body {
   padding: 0px 4%;
}

   /* Défintion Header */

.menu {
   width: 40%;
}

   /* Définition Main */

   /* Définition Nav */

.fonction-recherche {
   width: 50%;
}

nav li p {
margin: 10px 5px;
}

.fonction-filtre {
   padding: 0px;
}

.fonction-filtre i {
   padding-left: 10px;
}
   
   /* Définition section Conteneurs */

   /* Définition Conteneur - Hébergements */

.conteneur-hebergements {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
   padding: 0px;
}

.hebergements {
   width: 95%;
}

.cartes-hebergements a img {
   width: 96%;
   overflow: hidden;
   padding: 2%;
}

.hebergements h1, .hebergements h2 {
   margin: 10px 0px;
}

.populaires {
   width: 95%;
   margin: 50px 0px;
}

.populaires h1 {
   margin: 10px 0px;
}

.cartes-populaires {
   display: flex;
   flex-direction: row;
}

article {
   width: 30%;
}

article img {
   height : 134px;
}

article p {
   font-size: 13px;
}

article .description-carte {
   padding: 10px 5px;
}

article h3 {
   margin: 0px;
}

   /* Définition Conteneur - Activités */

.conteneur-activites h1 {
   padding-top: 0px;
}

.cartes-activites a {
   width: 22%;
}

.cartes-activites a img {
   height: 211px;
}
   
   /* Définition Footer */

footer {
   padding: 25px 7%;
   justify-content: space-between;
}

footer ul {
   width: 33%;
}

}

               /** Version Mobile **/

@media screen and (max-width: 768px) {

   /* Définition Body */

body {
   margin: 0px 0px;
   padding: 0px 0px;
   }

   /* Défintion Header */

header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 10px;
   margin: 30px 0px;
   padding: 10px 0px;
}

.menu {
   width: 100%;
}

header a {
   width: 50%;
   max-width: 60%;
   border-bottom: 3px solid #F2F2F2;
}

header a:hover {
   border-top: 0px;
   border-bottom: 3px solid #0065fc;
}

   /* Définition Main */

main {
   margin: 0px 0px;
   padding: 0px 0px;
}

   /* Définition Nav */

nav {
   padding: 0px 20px;
}

.texte-recherche p {
   margin-bottom: 36px;
}

.fonction-recherche {
   width: 100%;
   display: flex;
   justify-content: center;
}

.rechercher {
   display: none;
}

.fonction-recherche .fa-magnifying-glass {
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 18px;
   font-weight: 700;
   width: 15%;
   height: 100%;
   color:white;
   border: 1px solid #0065FC;
   border-radius: 0px 15px 15px 0px;
   background-color: #0065FC;
}


form {
   width: 100%;
}

.fonction-filtre {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
}

ul {
   width: 100%;
   height: 125px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
   padding-inline-start: 0px;
   margin: 0px 0px;
}

nav li {
   width: 47%;
   font-size: 11px;
   justify-content: stretch;
   margin: 0px 0px;
} 

li p {
   margin: 15px 10px;
}

li i {
   font-size: 18px;
   padding-left: 10px;
}

.fonction-information i {
margin-bottom: 20px;
}

   /* Définition section Conteneurs */

   /* Définition Conteneur - Hébergements */

.conteneur-hebergements {
   flex-direction: column-reverse;
}

.conteneur-hebergements h2 {
   display: none;
}

.cartes-populaires {
   flex-direction: column;
   align-items: center;
}

.populaires {
   border-radius: 0px;
   padding: 25px 5% 40px 5%;
   margin: 0 0px;
}

article {
   width: 100%;
}

article .description-carte {
   padding: 10px;
}

.hebergements {
   background-color:white;
   padding: 20px 5%;
}

.cartes-hebergements {
   width: 100%;
   flex-direction: column;
   align-items: center;
}

.cartes-hebergements a {
   width: 100%;
}

.cartes-hebergements a img {
   width: 98%;
   overflow: hidden;
   padding: 1%;
}

   /* Définition Conteneur - Activités */

.conteneur-activites {
   padding: 60px 0px;
}

.conteneur-activites h1 {
   max-width: 150px;
   padding: 0px 5%;
   margin: 0px 0px   
}

.cartes-activites {
   width: 95%;
   padding: 0% 5% 2.3% 5%;
   flex-direction: column;
   align-self: center;
}

.cartes-activites a {
   width: 100%;
}

.cartes-activites a img {
   height: 190px;
}

   /* Définition Footer */

footer {
   flex-direction: column;
   margin-top: 20px;
}

footer ul {
   width: auto;
   flex-wrap: nowrap;
   justify-content: center;
   padding: 10px 0px;
}

li p {
   margin: 10px 0px;
}

}

